--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "~1.5.0",
     "angular-route": "~1.5.0",
+    "angular-mocks": "~1.5.0",
     "angular-sanitize": "~1.5.0",
     "angular-animate": "~1.5.0",
     "angular-aria": "~1.5.0",
